refactoring: simplified code